--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img role="img" src="image.jpg" alt="Decription">
+	<h1 role="heading">This is heading</h1>
+	<ul role="list">
+		<li role="listitem">Item 1</li>
+		<li role="listitem">Item 2</li>
+		<li role="listitem">Item 3</li>
+	</ul>
+	<nav role="navigation">
+		<a href="#">Link</a>
+	</nav>
     <script type="text/javascript" src="./script.js">
 </script>
 
